# pandalone

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .project.sample  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dispatcher.py  Function Selector.py  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  dodo.py  pndltasks.py  pyproject.toml  setup.cfg  setup.py  xls_ref.xlsx
doc/: CHANGES.rst  CONTRIBUTING.rst  Makefile  conf.py  contribute.rst  index.rst  indices.rst  install.rst  intro.rst  make.bat  reference.rst  usage.rst  xls_ref.xlsx
pandalone/: Dispatcher.py  __init__.py  __main__.py  _mock.py  _version.py  components.py  dispatcher.py  mappings.py  pandata.py  pandfunc.py  pandui.py  pndlcmd.py  psteps.py  utils.py  winutils.py  xlsreader.py  xlsutils.py
pandalone-0.1.1/tests/: recursive.xlsx
pandalone/xlasso/: __init__.py  _capture.py  _lasso.py  _parse.py  _xlrd.py  _xlref.py
pandalone/xleash/: __init__.py  _capture.py  _filter.py  _lasso.py  _pandas_filters.py  _parse.py  _xlrd.py
requirements/: development.pip  development.txt  execution.pip  miniconda.conda  miniconda.txt
tests/: _tutils.py  assertutils.py  empty.xlsx  recursive.xlsx  test_components.py  test_dispatcher.py  test_docs.py  test_dodotasks.py  test_excel.py  test_jsonschema.py  test_mappings.py  test_pandata.py  test_pandata_schema.py  test_pandfunc.py  test_pandui.py  test_pndlcmd.py  test_pndltasks.py  test_psteps.py  test_utils.py  test_xlasso.py  test_xleash.py  test_xlref.py  test_xlsreader.py  test_xlsutils.py  xlref.xlsx
(+10 files in other folders)
