[build-system]
requires = ["setuptools>=30.3.0", "wheel"]

[tool.black]
exclude = '''
    /(
        \.eggs
        |\.git
        |\.hg
        |\.mypy_cache
        |\.nox
        |\.tox
        |.?venv.*
        |_build
        |buck-out
        |build
        |dist
        |.vscode/.+
    )/
'''